提交最新代码

--- a/static/src/css/header.css
+++ b/static/src/css/header.css
@@ -23,6 +23,9 @@ body {
   .new-goods .goods-cont-item .md-warp-cont {
     width: 800px;
   }
+  .floor-md .md-warp-cont {
+    width: 400px;
+  }
 }
 .w990 .header {
   width: 990px;
@@ -44,4 +47,7 @@ body {
 }
 .w990 .new-goods .goods-cont-item .md-warp-cont {
   width: 800px;
+}
+.w990 .floor-md .md-warp-cont {
+  width: 400px;
 }
