--- a/static/src/less/header.less
+++ b/static/src/less/header.less
@@ -22,6 +22,9 @@ body{overflow-x: hidden;}
         .new-goods .goods-cont-item .md-warp-cont{
             width: 800px;
         }
+        .floor-md .md-warp-cont{
+            width:400px;
+        }
     }
 }
 
