--- a/view/index.html
+++ b/view/index.html
@@ -140,6 +140,115 @@
                     <span class="floor-en-name">Fashion dress</span>
                 </div>
             </div>
+            <div class="md-warp-sidebar">
+                <a href="#" class="warp-sidebar-bn">
+                    <img src="/static/src/img/sbn.jpg">
+                </a>
+                <ul>
+                    <li><a href="#">潮流女装</a></li>    
+                    <li><a href="#">精品男装</a></li>    
+                    <li><a href="#">鞋子箱包</a></li>    
+                    <li><a href="#">时尚配饰</a></li>    
+                </ul>
+            </div>
+            <div class="md-warp-bn">
+                <a href="#">
+                    <img src="/static/src/img/bn.jpg">
+                    <div class="md-warp-bn-info">
+                        <span class="bn-tit bn-max-tit">冬装超值回馈</span>
+                        <span class="bn-tit bn-min-tit">男装特惠季</span>
+                        <span class="bn-detail">了解详情</span>
+                    </div>
+                </a>
+                <a href="#">
+                    <img src="/static/src/img/bn2.jpg">
+                    <div class="md-warp-bn-info">
+                        <span class="bn-tit bn-max-tit">冬装超值回馈</span>
+                        <span class="bn-tit bn-min-tit">男装特惠季</span>
+                        <span class="bn-detail">了解详情</span>
+                    </div>
+                </a>
+            </div>
+            <div class="md-warp-cont-tab">
+                <ul class="md-warp-cont">
+                    <li>
+                        <a href="#">
+                            <img src="#" width="173" height="173" alt="" />            
+                            <span class="goods-title">【包邮】全棉包包秋衣秋裤啊</span>
+                        </a>
+                        <p class="price-box">
+                            <span class="hs-price"> <b>￥</b>
+                                14111.75
+                            </span>
+                            <span class="del-price">59111.75元</span>
+                        </p>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <img src="#" width="173" height="173" alt="" />            
+                            <span class="goods-title">【包邮】全棉包包秋衣秋裤啊</span>
+                        </a>
+                        <p class="price-box">
+                            <span class="hs-price"> <b>￥</b>
+                                14111.75
+                            </span>
+                            <span class="del-price">59111.75元</span>
+                        </p>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <img src="#" width="173" height="173" alt="" />            
+                            <span class="goods-title">【包邮】全棉包包秋衣秋裤啊</span>
+                        </a>
+                        <p class="price-box">
+                            <span class="hs-price">
+                                <b>￥</b>
+                                14111.75
+                            </span>
+                            <span class="del-price">59111.75元</span>
+                        </p>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <img src="#" width="173" height="173" alt="" />            
+                            <span class="goods-title">【包邮】全棉包包秋衣秋裤啊</span>
+                        </a>
+                        <p class="price-box">
+                            <span class="hs-price">
+                                <b>￥</b>
+                                14111.75
+                            </span>
+                            <span class="del-price">59111.75元</span>
+                        </p>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <img src="#" width="173" height="173" alt="" />            
+                            <span class="goods-title">【包邮】全棉包包秋衣秋裤啊</span>
+                        </a>
+                        <p class="price-box">
+                            <span class="hs-price">
+                                <b>￥</b>
+                                14111.75
+                            </span>
+                            <span class="del-price">59111.75元</span>
+                        </p>
+                    </li>                
+                    <li>
+                        <a href="#">
+                            <img src="#" width="173" height="173" alt="" />            
+                            <span class="goods-title">【包邮】全棉包包秋衣秋裤啊</span>
+                        </a>
+                        <p class="price-box">
+                            <span class="hs-price">
+                                <b>￥</b>
+                                14111.75
+                            </span>
+                            <span class="del-price">59111.75元</span>
+                        </p>
+                    </li>
+                </ul>
+            </div>
         </div>
 
         <div class="md-warp life floor-md">
@@ -152,6 +261,115 @@
                     <span class="floor-en-name">Department of life</span>
                 </div>
             </div>
+            <div class="md-warp-sidebar">
+                <a href="#" class="warp-sidebar-bn">
+                    <img src="/static/src/img/sbn.jpg">
+                </a>
+                <ul>
+                    <li><a href="#">美食特产</a></li>    
+                    <li><a href="#">数码家电</a></li>    
+                    <li><a href="#">家居日用</a></li>    
+                    <li><a href="#">综合商品</a></li>    
+                </ul>
+            </div>
+            <div class="md-warp-bn">
+                <a href="#">
+                    <img src="/static/src/img/bn.jpg">
+                    <div class="md-warp-bn-info">
+                        <span class="bn-tit bn-max-tit">冬装超值回馈</span>
+                        <span class="bn-tit bn-min-tit">男装特惠季</span>
+                        <span class="bn-detail">了解详情</span>
+                    </div>
+                </a>
+                <a href="#">
+                    <img src="/static/src/img/bn2.jpg">
+                    <div class="md-warp-bn-info">
+                        <span class="bn-tit bn-max-tit">冬装超值回馈</span>
+                        <span class="bn-tit bn-min-tit">男装特惠季</span>
+                        <span class="bn-detail">了解详情</span>
+                    </div>
+                </a>
+            </div>
+            <div class="md-warp-cont-tab">
+                <ul class="md-warp-cont">
+                    <li>
+                        <a href="#">
+                            <img src="#" width="173" height="173" alt="" />            
+                            <span class="goods-title">【包邮】全棉包包秋衣秋裤啊</span>
+                        </a>
+                        <p class="price-box">
+                            <span class="hs-price"> <b>￥</b>
+                                14111.75
+                            </span>
+                            <span class="del-price">59111.75元</span>
+                        </p>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <img src="#" width="173" height="173" alt="" />            
+                            <span class="goods-title">【包邮】全棉包包秋衣秋裤啊</span>
+                        </a>
+                        <p class="price-box">
+                            <span class="hs-price"> <b>￥</b>
+                                14111.75
+                            </span>
+                            <span class="del-price">59111.75元</span>
+                        </p>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <img src="#" width="173" height="173" alt="" />            
+                            <span class="goods-title">【包邮】全棉包包秋衣秋裤啊</span>
+                        </a>
+                        <p class="price-box">
+                            <span class="hs-price">
+                                <b>￥</b>
+                                14111.75
+                            </span>
+                            <span class="del-price">59111.75元</span>
+                        </p>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <img src="#" width="173" height="173" alt="" />            
+                            <span class="goods-title">【包邮】全棉包包秋衣秋裤啊</span>
+                        </a>
+                        <p class="price-box">
+                            <span class="hs-price">
+                                <b>￥</b>
+                                14111.75
+                            </span>
+                            <span class="del-price">59111.75元</span>
+                        </p>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <img src="#" width="173" height="173" alt="" />            
+                            <span class="goods-title">【包邮】全棉包包秋衣秋裤啊</span>
+                        </a>
+                        <p class="price-box">
+                            <span class="hs-price">
+                                <b>￥</b>
+                                14111.75
+                            </span>
+                            <span class="del-price">59111.75元</span>
+                        </p>
+                    </li>                
+                    <li>
+                        <a href="#">
+                            <img src="#" width="173" height="173" alt="" />            
+                            <span class="goods-title">【包邮】全棉包包秋衣秋裤啊</span>
+                        </a>
+                        <p class="price-box">
+                            <span class="hs-price">
+                                <b>￥</b>
+                                14111.75
+                            </span>
+                            <span class="del-price">59111.75元</span>
+                        </p>
+                    </li>
+                </ul>
+            </div>
         </div>
 
         <div class="md-warp infant-mom floor-md">
@@ -163,6 +381,115 @@
                     <span class="line">/</span>
                     <span class="floor-en-name">Maternal and child supplies</span>
                 </div>
+            </div>
+            <div class="md-warp-sidebar">
+                <a href="#" class="warp-sidebar-bn">
+                    <img src="/static/src/img/sbn.jpg">
+                </a>
+                <ul>
+                    <li><a href="#">美食特产</a></li>    
+                    <li><a href="#">数码家电</a></li>    
+                    <li><a href="#">家居日用</a></li>    
+                    <li><a href="#">综合商品</a></li>    
+                </ul>
+            </div>
+            <div class="md-warp-bn">
+                <a href="#">
+                    <img src="/static/src/img/bn.jpg">
+                    <div class="md-warp-bn-info">
+                        <span class="bn-tit bn-max-tit">冬装超值回馈</span>
+                        <span class="bn-tit bn-min-tit">男装特惠季</span>
+                        <span class="bn-detail">了解详情</span>
+                    </div>
+                </a>
+                <a href="#">
+                    <img src="/static/src/img/bn2.jpg">
+                    <div class="md-warp-bn-info">
+                        <span class="bn-tit bn-max-tit">冬装超值回馈</span>
+                        <span class="bn-tit bn-min-tit">男装特惠季</span>
+                        <span class="bn-detail">了解详情</span>
+                    </div>
+                </a>
+            </div>
+            <div class="md-warp-cont-tab">
+                <ul class="md-warp-cont">
+                    <li>
+                        <a href="#">
+                            <img src="#" width="173" height="173" alt="" />            
+                            <span class="goods-title">【包邮】全棉包包秋衣秋裤啊</span>
+                        </a>
+                        <p class="price-box">
+                            <span class="hs-price"> <b>￥</b>
+                                14111.75
+                            </span>
+                            <span class="del-price">59111.75元</span>
+                        </p>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <img src="#" width="173" height="173" alt="" />            
+                            <span class="goods-title">【包邮】全棉包包秋衣秋裤啊</span>
+                        </a>
+                        <p class="price-box">
+                            <span class="hs-price"> <b>￥</b>
+                                14111.75
+                            </span>
+                            <span class="del-price">59111.75元</span>
+                        </p>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <img src="#" width="173" height="173" alt="" />            
+                            <span class="goods-title">【包邮】全棉包包秋衣秋裤啊</span>
+                        </a>
+                        <p class="price-box">
+                            <span class="hs-price">
+                                <b>￥</b>
+                                14111.75
+                            </span>
+                            <span class="del-price">59111.75元</span>
+                        </p>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <img src="#" width="173" height="173" alt="" />            
+                            <span class="goods-title">【包邮】全棉包包秋衣秋裤啊</span>
+                        </a>
+                        <p class="price-box">
+                            <span class="hs-price">
+                                <b>￥</b>
+                                14111.75
+                            </span>
+                            <span class="del-price">59111.75元</span>
+                        </p>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <img src="#" width="173" height="173" alt="" />            
+                            <span class="goods-title">【包邮】全棉包包秋衣秋裤啊</span>
+                        </a>
+                        <p class="price-box">
+                            <span class="hs-price">
+                                <b>￥</b>
+                                14111.75
+                            </span>
+                            <span class="del-price">59111.75元</span>
+                        </p>
+                    </li>                
+                    <li>
+                        <a href="#">
+                            <img src="#" width="173" height="173" alt="" />            
+                            <span class="goods-title">【包邮】全棉包包秋衣秋裤啊</span>
+                        </a>
+                        <p class="price-box">
+                            <span class="hs-price">
+                                <b>￥</b>
+                                14111.75
+                            </span>
+                            <span class="del-price">59111.75元</span>
+                        </p>
+                    </li>
+                </ul>
             </div>
         </div>
 
