--- a/static/src/less/header.less
+++ b/static/src/less/header.less
@@ -16,6 +16,7 @@ body{overflow-x: hidden;}
                 margin-left: 490px;
             }
         }
+        .sider{_margin-left: -990px;}
         .md-warp{
             width: 990px;
         }
