--- a/static/src/css/index.css
+++ b/static/src/css/index.css
@@ -106,11 +106,11 @@
   float: right;
   width: 200px;
   height: 33px;
-  background-color: red;
 }
 .banner {
   width: 100%;
   height: 340px;
+  background-color: red;
 }
 .banner-main {
   margin: 0 auto;
@@ -121,18 +121,25 @@
   width: 100%;
   height: 340px;
   overflow: hidden;
+  background-color: red;
 }
 .banner-pannel .banner-cont {
   margin-left: 590px;
   width: 800px;
 }
 .banner-pannel .banner-cont ul {
+  _position: relative;
   margin-left: -400px;
   width: 800px;
+  height: 340px;
+  overflow: hidden;
   background-color: #e1e1e1;
 }
+.banner-pannel .banner-cont ul li {
+  float: left;
+}
 .banner-pannel .banner-cont ul li a {
-  display: block;
+  display: inline-block;
   width: 100%;
   height: 340px;
 }
@@ -140,9 +147,10 @@
   position: relative;
   float: left;
   margin-left: -100%;
+  _margin-left: -1190px;
   width: 190px;
   height: 340px;
-  background-color: red;
+  background-color: #000;
 }
 .sider .sider-title {
   position: absolute;
@@ -345,6 +353,7 @@
 .new-goods .new-goods-tab .goods-tab-item {
   position: relative;
   display: inline-block;
+  float: left;
   width: 67px;
 }
 .new-goods .new-goods-tab .goods-tab-item:hover {
@@ -354,9 +363,11 @@
   color: #d11414;
 }
 .new-goods .new-goods-tab span {
+  display: inline-block;
+  float: left;
   margin: 0 10px;
   font-size: 12px;
-  vertical-align: bottom;
+  line-height: 29px;
 }
 .new-goods .new-goods-cont {
   width: 100%;
@@ -438,8 +449,143 @@
   display: inline-block;
   margin: 0 6px;
 }
+.expert-save .expert-save-cont {
+  width: 790px;
+}
+.expert-save .save-cont-item li {
+  float: left;
+  width: 263px;
+  height: 124px;
+  border-bottom: 1px solid #f5f5f5;
+  background-color: #fff;
+}
+.expert-save .save-cont-item li a {
+  display: inline-block;
+  padding-left: 18px;
+  padding-top: 25px;
+  width: 245px;
+  height: 99px;
+}
+.expert-save .save-cont-item li .save-icon {
+  display: inline-block;
+  margin-right: 10px;
+  float: left;
+  width: 18px;
+  height: 22px;
+  background-color: #c1c1c1;
+}
+.expert-save .save-cont-item li img {
+  float: left;
+  margin-right: 10px;
+  border-radius: 3px;
+  background-color: #bec1c9;
+}
+.expert-save .save-cont-item li span {
+  display: inline-block;
+  float: left;
+  width: 125px;
+  color: #888;
+  font-size: 12px;
+  overflow: hidden;
+  font-family: \5FAE\8F6F\96C5\9ED1;
+}
+.expert-save .save-cont-item li .save-name {
+  margin-top: -4px;
+  margin-bottom: 5px;
+}
+.expert-save .save-cont-item li .save-num {
+  color: #000;
+  font-weight: 100;
+}
+.expert-save .save-cont-item li .save-money {
+  margin-top: 15px;
+}
+.expert-save .save-cont-item li .save-money b {
+  color: #d11414;
+  font-size: 16px;
+  font-weight: 100;
+}
+.expert-save .save-cont-item li sub,
+.expert-save .save-cont-item li sup {
+  color: #d11414;
+  font-size: 12px;
+}
+.expert-save .save-cont-item li sup {
+  margin-left: 3px;
+  vertical-align: super;
+}
 .expert-bask {
   margin-left: 10px;
   float: left;
   width: 390px;
+}
+.expert-bask-cont {
+  padding: 15px 10px;
+  height: 220px;
+  overflow: hidden;
+  background-color: #fff;
+}
+.expert-bask-cont .bask-cont-item {
+  margin-bottom: 20px;
+  height: 100px;
+  width: 370px;
+}
+.expert-bask-cont .bask-cont-item .head-img {
+  display: inline-block;
+  float: left;
+  width: 75px;
+  height: 100px;
+  border-right: 1px dashed #dbdbdb;
+}
+.expert-bask-cont .bask-cont-item .head-img img {
+  margin-top: 16px;
+  float: left;
+  border-radius: 50%;
+}
+.expert-bask-cont .bask-cont-item .head-img span {
+  display: inline-block;
+  margin-top: 3px;
+  width: 60px;
+  height: 20px;
+  text-align: center;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  color: #666;
+}
+.expert-bask-cont .bask-cont-item .bask-img {
+  margin: 0 15px;
+  float: left;
+  width: 80px;
+  height: 100px;
+  background-color: #999;
+}
+.expert-bask-cont .bask-cont-item .bask-detail {
+  float: left;
+  width: 184px;
+  height: 100px;
+}
+.expert-bask-cont .bask-cont-item .bask-detail span {
+  width: 180px;
+  height: 20px;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  color: #666;
+  font-size: 14px;
+}
+.expert-bask-cont .bask-cont-item .bask-detail p {
+  margin-top: 5px;
+  margin-bottom: 5px;
+  padding: 8px 5px;
+  width: 174px;
+  height: 39px;
+  font-size: 12px;
+  color: #999;
+  background-color: #f8f8f8;
+}
+.expert-bask-cont .bask-cont-item .bask-detail a {
+  margin-right: 5px;
+  font-size: 12px;
+  color: #ccc;
 }
