--- a/static/src/less/header.less
+++ b/static/src/less/header.less
@@ -26,6 +26,12 @@ body{overflow-x: hidden;}
         .floor-md .md-warp-cont{
             width:400px;
         }
+        .expert-save{
+            width: 590px;
+            .save-cont-item li{
+                width: 295px;
+            }
+        }
     }
 }
 
