--- a/view/index.html
+++ b/view/index.html
@@ -616,5 +616,58 @@
             </div>
         </div>
     </div>
+    <div class="footer">
+        <div class="md-warp footer-cont">
+            <div class="f-contact"></div>
+            <div class="f-strength">
+                <div class="f-strength-item">
+                    <div class="f-strength-item-up">
+                        <i></i>
+                        <span>每日更新</span>
+                        <p>每天10点、20点准时上线</p>   
+                    </div>
+                    <div class="f-strength-item-sub">
+                        <div class="align">
+                            <span>买家常见问题</span>
+                            <a href="#">如何抢购商品</a>
+                            <a href="#">如何领回划算金</a>
+                            <a href="#">如何晒单</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="f-strength-item">
+                    <div class="f-strength-item-up">
+                        <i></i>
+                        <span>消费保障</span>
+                        <p>商家预存足额保证金</p>   
+                    </div>
+                    <div class="f-strength-item-sub">
+                        <div class="align">
+                            <span>商家常见问题</span>
+                            <a href="#">众划算报名条件</a>
+                            <a href="#">如何发布众划算</a>
+                            <a href="#">众划算商家规则</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="f-strength-item">
+                    <div class="f-strength-item-up">
+                        <i></i>
+                        <span>闪电返款</span>
+                        <p>每笔闪返50%~90%</p>   
+                    </div>
+                    <div class="f-strength-item-sub">
+                        <div class="align">
+                            <span>服务中心</span>
+                            <a href="#">商务合作</a>
+                            <a href="#">订阅邮件</a>
+                            <a href="#">在线客服</a>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
 </body>
 </html>
