--- a/static/src/less/index.less
+++ b/static/src/less/index.less
@@ -170,6 +170,7 @@
 }
 
 .warp{
+    padding-bottom: 110px;
     width: 100%;
     background-color: #f5f5f5;
 }
@@ -458,7 +459,10 @@
     &-save{
         float: left;
         width: 790px;
+        height: 283px;
+        overflow: hidden;
         &-tab{
+            margin-right: 10px;
             float: right;
             font-size: 12px;
             a{
@@ -477,7 +481,7 @@
             }
         }
         .expert-save-cont{
-            width:790px;
+            width:100%;
         }
         .save-cont-item{
                 li{
@@ -616,6 +620,73 @@
                     }
                 }
             }
+        }
+    }
+}
+
+.footer{
+    width: 100%;
+    border-top: 1px solid #d9d9d9;
+    background-color: #e8e8e8;
+}
+.footer-cont{
+    padding:15px 0;
+    height:275px;
+    overflow: hidden;
+    border-bottom: 1px solid #dadada;
+}
+
+.f-contact{
+    float: left;
+    width: 200px;
+    height: 275px;
+    background-color: blue;
+}
+.f-strength{
+    float: left;
+    .f-strength-item{
+        float: left;
+        padding:10px 20px 0;
+        width: 160px;
+        height: 265px;
+        border-left: 1px solid #dadada;
+        overflow: hidden;
+    }
+    .f-strength-item-up{
+        height:107px;
+        border-bottom: 1px dashed #dadada;
+        text-align: center;
+        span{
+            font-size: 14px;
+            font-family: \5FAE\8F6F\96C5\9ED1;
+            color:#333;
+        }
+        p{
+            font-size: 12px;
+            color:#888;
+        }
+    }
+    .f-strength-item-sub{
+        padding-top: 20px;
+        text-align: center;
+        font-family: \5FAE\8F6F\96C5\9ED1;
+        .align{
+            display:inline-block;
+            margin: 0 auto;
+            text-align: left;
+        }
+        span{
+            margin-bottom: 20px;
+            font-size: 16px;
+            color:#333;
+        }
+        a{
+            margin-bottom: 15px;
+            font-size: 12px;
+            color:#888;
+        }
+        span,a{
+            display:block;
         }
     }
 }
